force-app/main/default/objects/User/fields/IFv2_ByPassValidation__c.field-meta.xml
<CustomField>
    <fullName>IFv2_ByPassValidation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to handle Validation Rules from firing</description>
    <label>By Pass Validation</label>
    <type>Checkbox</type>
</CustomField>