force-app/main/default/objects/User/fields/IFv2_iFreight_Approver_Level_3_2__c.field-meta.xml
<CustomField>
    <fullName>IFv2_iFreight_Approver_Level_3_2__c</fullName>
    <description>used for iFreight Approval Process</description>
    <label>iFreight Approver Level 3.2</label>
    <relationshipName>iFreight_Level_3_2</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>