force-app/main/default/objects/User/fields/IFv2_iFreight_Approver_Level_3_2_proxy__c.field-meta.xml
<CustomField>
    <fullName>IFv2_iFreight_Approver_Level_3_2_proxy__c</fullName>
    <label>iFreight Approver Level 3.2 proxy</label>
    <relationshipName>iFreight_Approver_Level_3_2_Proxy</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>