force-app/main/default/objects/User/fields/IFv2_iFreight_Approver_Level_4__c.field-meta.xml
<CustomField>
    <fullName>IFv2_iFreight_Approver_Level_4__c</fullName>
    <label>iFreight Approver Level 4</label>
    <relationshipName>iFreight_Approver_Level_1</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>