force-app/main/default/objects/User/fields/IFv2_iFreight_Approver_Level_4_Proxy__c.field-meta.xml
<CustomField>
    <fullName>IFv2_iFreight_Approver_Level_4_Proxy__c</fullName>
    <label>iFreight Approver Level 4 Proxy</label>
    <relationshipName>iFreight_Approver_Level_4_Proxy</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>