force-app/main/default/objects/User/fields/IFv2_InstanceDomain__c.field-meta.xml
<CustomField>
    <fullName>IFv2_InstanceDomain__c</fullName>
    <formula>$Label.Production_URL+&quot;/&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IFv2_InstanceDomain</label>
    <type>Text</type>
</CustomField>