force-app/main/default/objects/User/fields/IFv2_RequestAPAC__c.field-meta.xml
<CustomField>
    <fullName>IFv2_RequestAPAC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is used to identify Request Extension.</description>
    <label>IFv2_RequestAPAC</label>
    <type>Checkbox</type>
</CustomField>